rest/lookups/v2/README.md
# Go API client for openapi

This is the public Twilio REST API.

## Overview
This API client was generated by the [OpenAPI Generator](https://openapi-generator.tech) project from the OpenAPI specs located at [twilio/twilio-oai](https://github.com/twilio/twilio-oai/tree/main/spec).  By using the [OpenAPI-spec](https://www.openapis.org/) from a remote server, you can easily generate an API client.

- API version: 1.0.0
- Package version: 1.0.0
- Build package: com.twilio.oai.TwilioGoGenerator
For more information, please visit [https://support.twilio.com](https://support.twilio.com)

## Installation

Install the following dependencies:

```shell
go get github.com/stretchr/testify/assert
go get golang.org/x/net/context
```

Put the package under your project folder and add the following in import:

```golang
import "./openapi"
```

## Documentation for API Endpoints

All URIs are relative to *https://lookups.twilio.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*BatchQueryApi* | [**CreateBulkLookup**](docs/BatchQueryApi.md#createbulklookup) | **Post** /v2/batch/query | In Request Bulk
*PhoneNumbersApi* | [**FetchPhoneNumber**](docs/PhoneNumbersApi.md#fetchphonenumber) | **Get** /v2/PhoneNumbers/{PhoneNumber} | Full API documentation: https://www.twilio.com/docs/lookup/v2-api
*PhoneNumbersOverridesApi* | [**CreateLookupPhoneNumberOverrides**](docs/PhoneNumbersOverridesApi.md#createlookupphonenumberoverrides) | **Post** /v2/PhoneNumbers/{PhoneNumber}/Overrides/{Field} | Create Override for a Phone Number for a specific field
*PhoneNumbersOverridesApi* | [**DeleteLookupPhoneNumberOverrides**](docs/PhoneNumbersOverridesApi.md#deletelookupphonenumberoverrides) | **Delete** /v2/PhoneNumbers/{PhoneNumber}/Overrides/{Field} | Delete an Override for a Phone Number for a specific field
*PhoneNumbersOverridesApi* | [**FetchLookupPhoneNumberOverrides**](docs/PhoneNumbersOverridesApi.md#fetchlookupphonenumberoverrides) | **Get** /v2/PhoneNumbers/{PhoneNumber}/Overrides/{Field} | Get Overrides for a Phone Number for a specific field.
*PhoneNumbersOverridesApi* | [**UpdateLookupPhoneNumberOverrides**](docs/PhoneNumbersOverridesApi.md#updatelookupphonenumberoverrides) | **Put** /v2/PhoneNumbers/{PhoneNumber}/Overrides/{Field} | Update Override for a Phone Number for a specific field
*RateLimitsApi* | [**FetchLookupAccountRateLimits**](docs/RateLimitsApi.md#fetchlookupaccountratelimits) | **Get** /v2/RateLimits | Get account rate limits
*RateLimitsFieldsBucketApi* | [**DeleteLookupRateLimit**](docs/RateLimitsFieldsBucketApi.md#deletelookupratelimit) | **Delete** /v2/RateLimits/Fields/{Field}/Bucket/{Bucket} | Delete rate limit
*RateLimitsFieldsBucketApi* | [**FetchLookupRateLimit**](docs/RateLimitsFieldsBucketApi.md#fetchlookupratelimit) | **Get** /v2/RateLimits/Fields/{Field}/Bucket/{Bucket} | Get rate limit
*RateLimitsFieldsBucketApi* | [**UpdateLookupRateLimit**](docs/RateLimitsFieldsBucketApi.md#updatelookupratelimit) | **Put** /v2/RateLimits/Fields/{Field}/Bucket/{Bucket} | Upsert rate limit


## Documentation For Models

 - [LastSimSwapInfo](docs/LastSimSwapInfo.md)
 - [RateLimitRequest](docs/RateLimitRequest.md)
 - [RateLimitResponse](docs/RateLimitResponse.md)
 - [LineStatusInfo](docs/LineStatusInfo.md)
 - [RateLimitListResponse](docs/RateLimitListResponse.md)
 - [LookupRequest](docs/LookupRequest.md)
 - [OverridesRequest](docs/OverridesRequest.md)
 - [CallForwardingInfo](docs/CallForwardingInfo.md)
 - [JobStatus](docs/JobStatus.md)
 - [ReassignedNumberInfo](docs/ReassignedNumberInfo.md)
 - [ValidationError](docs/ValidationError.md)
 - [LookupResponse1](docs/LookupResponse1.md)
 - [LookupBatchRequest](docs/LookupBatchRequest.md)
 - [LookupBatchResponse](docs/LookupBatchResponse.md)
 - [JobResult](docs/JobResult.md)
 - [FetchLookupAccountRateLimits400Response](docs/FetchLookupAccountRateLimits400Response.md)
 - [ReassignedNumberParameters](docs/ReassignedNumberParameters.md)
 - [LookupResponse](docs/LookupResponse.md)
 - [RiskParameters](docs/RiskParameters.md)
 - [SmsPumpingRiskInfo](docs/SmsPumpingRiskInfo.md)
 - [LookupJobResponse](docs/LookupJobResponse.md)
 - [LookupJobRequest](docs/LookupJobRequest.md)
 - [IdentityMatchParameters](docs/IdentityMatchParameters.md)
 - [IdentityMatchInfo](docs/IdentityMatchInfo.md)
 - [LineTypeIntelligenceInfo](docs/LineTypeIntelligenceInfo.md)
 - [OverridesResponse](docs/OverridesResponse.md)
 - [JobThresholds](docs/JobThresholds.md)
 - [SimSwapInfo](docs/SimSwapInfo.md)
 - [CallerNameInfo](docs/CallerNameInfo.md)


## Documentation For Authorization



## accountSid_authToken

- **Type**: HTTP basic authentication

Example

```golang
auth := context.WithValue(context.Background(), sw.ContextBasicAuth, sw.BasicAuth{
    UserName: "username",
    Password: "password",
})
r, err := client.Service.Operation(auth, args)
```

